Update env example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ CLIENT_ID=
 CLIENT_SECRET=
 
 # API variables
-FARM_ID=
+FARM_SHORTCODE_ID=
 
 # API URLS
 TOKEN_URL=
@@ -11,4 +11,7 @@ AUTH_URL=
 API_URL=
 
 # Local redirect
-REDIRECT_URI=
+REDIRECT_URI=http://localhost
+
+# Farm variables
+FARM_COUNTRY=
