--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,10 @@ REDIRECT_URI=http://localhost
 
 # Farm variables
 FARM_COUNTRY=
+
+# Login details
+USER_NAME=
+PASSWORD=
+
+# Crops tracker url
+CROP_URL=
